--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <main>
     <div>
       <h2>Buttons</h2>
+      <h2>Buttons</h2>
       <div>
         <button>Primary</button>
         <button>Secondary</button>
