assigning classes to buttons

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <h2>Buttons</h2>
       <h2>Buttons</h2>
       <div>
-        <button>Primary</button>
-        <button>Secondary</button>
-        <button>Error</button>
+        <button class = "primary-button">Primary</button>
+        <button class = "secondary-button">Secondary</button>
+        <button class = "error-button">Error</button>
       </div>
     </div>
     <div>
