--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 <body>
   <!-- Place your site's HTML here -->
   <header>
-    <h1>Pseudo Zen Garden</h1>
+    <div>
+      <h1>Pseudo Zen Garden</h1>
+    </div>
+    
   </header>
   <main>
     <div>
-      <h2>Buttons</h2>
       <h2>Buttons</h2>
       <div>
         <button class = "primary-button">Primary</button>
