--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     
   </header>
   <main>
-    <div>
+    <div class = "buttons">
       <h2>Buttons</h2>
-      <div>
+      <div >
         <button class = "primary-button">Primary</button>
         <button class = "secondary-button">Secondary</button>
         <button class = "error-button">Error</button>
@@ -42,11 +42,13 @@
     <div>
       <h2>Links</h2>
       <div>
+        <nav>
         <a href="#">Primary link</a>
         <a href="#">Secondary link</a>
+      </nav>
       </div>
     </div>
-    <div>
+    <div class = "form-elements">
       <h2>Form elements</h2>
       <form action="#">
         <label for="name">Full Name:</label>
