adding media screen to page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class = "error-button">Error</button>
       </div>
     </div>
-    <div>
+    <div class = "links">
       <h2>Links</h2>
       <div>
         <nav>
