--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
         <button class = "error-button">Error</button>
       </div>
     </div>
-    <div class = "links">
+    <div class = "overalllink">
       <h2>Links</h2>
-      <div>
+      <div class = "linkx2">
         <nav>
-        <a href="#">Primary link</a>
-        <a href="#">Secondary link</a>
+        <a href="#" class = "primarylink">Primary link</a>
+        <a href="#" class ="secondarylink">Secondary link</a>
       </nav>
       </div>
     </div>
     <div class = "form-elements">
       <h2>Form elements</h2>
       <form action="#">
-        <label for="name">Full Name:</label>
-        <input disabled type="text" id="name" name="name" />
-        <label for="comments">Comments:</label>
+        <label for="name" class = "fullname">Full Name:</label>
+        <input type="text" id="name" name="name" />
+        <label for="comments" class = "whitebox">Comments:</label>
         <textarea id="comments" name="comments"></textarea>
 
         <button>Save</button>
