--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h2>Form elements</h2>
       <form action="#">
         <label for="name" class = "fullname">Full Name:</label>
-        <input type="text" id="name" name="name" />
+        <input disable type="text" id="name" name="name" />
         <label for="comments" class = "whitebox">Comments:</label>
         <textarea id="comments" name="comments"></textarea>
 
